fix text overflowing on chrome

--- a/style.css
+++ b/style.css
@@ -1068,6 +1068,7 @@ html:not(.f-fileUploading) .fileUploading {
 .activityContent > .bar {
 	border: none;
 	height: 1.5rem;
+	white-space: pre;
 }
 
 .sidebarPageTitle * {
